Update dependencies, clarify UI, and add basic test
Upgrades several dev dependencies, including vitest and rollup,
to address stability and compatibility. Clarifies the UI by
marking the Zwift tab as work in progress. Adds a simple test
to verify chart rendering utility presence. Ensures the menu
bar stays visible in the application window for improved
usability.

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -229,7 +229,7 @@
 				aria-selected="false"
 				tabindex="0"
 			>
-				Zwift
+				Zwift (WIP)
 			</button>
 		</div>
 		<!-- Card-like Container for Tab Content -->
