--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -54,6 +54,8 @@
 		<script src="libs/hammer.min.js"></script>
 		<script src="libs/chartjs-plugin-zoom.js"></script>
 		<script src="libs/chartjs-adapter-date-fns.js"></script>
+		<!-- JSZip for ZIP file creation -->
+		<script src="libs/jszip.min.js"></script>
 		<script
 			src="libs/vega-5-latest.js"
 			defer
@@ -167,106 +169,191 @@
 			class="tab-bar"
 			role="tablist"
 			aria-label="Main Tabs"
-		>		<button
-			class="tab-button active"
-			id="tab-map"
-			role="tab"
-			aria-selected="true"
-			tabindex="0"
 		>
-			<svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-				<path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
-				<circle cx="12" cy="10" r="3"/>
-			</svg>
-			Map
-		</button>
-		<button
-			class="tab-button"
-			id="tab-altfit"
-			role="tab"
-			aria-selected="false"
-			tabindex="0"
-		>
-			<svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-				<ellipse cx="12" cy="5" rx="9" ry="3"/>
-				<path d="M3 5v14c0 1.66 4.03 3 9 3s9-1.34 9-3V5"/>
-				<path d="M3 12c0 1.66 4.03 3 9 3s9-1.34 9-3"/>
-			</svg>
-			Data
-		</button>
-		<button
-			class="tab-button"
-			id="tab-data"
-			role="tab"
-			aria-selected="false"
-			tabindex="0"
-		>
-			<svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-				<polyline points="16,18 22,12 16,6"/>
-				<polyline points="8,6 2,12 8,18"/>
-			</svg>
-			Raw Data
-		</button>
-		<button
-			class="tab-button"
-			id="tab-chart"
-			role="tab"
-			aria-selected="false"
-			tabindex="0"
-		>
-			<svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-				<line x1="18" y1="20" x2="18" y2="10"/>
-				<line x1="12" y1="20" x2="12" y2="4"/>
-				<line x1="6" y1="20" x2="6" y2="14"/>
-			</svg>
-			Chart
-		</button>
-		<button
-			class="tab-button"
-			id="tab-chartjs"
-			role="tab"
-			aria-selected="false"
-			tabindex="0"
-		>
-			<svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-				<polyline points="3,12 7,8 13,14 21,6"/>
-				<polyline points="17,6 21,6 21,10"/>
-			</svg>
-			Charts v2
-		</button>
-		<button
-			class="tab-button"
-			id="tab-summary"
-			role="tab"
-			aria-selected="false"
-			tabindex="0"
-		>
-			<svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-				<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-				<polyline points="14,2 14,8 20,8"/>
-				<line x1="16" y1="13" x2="8" y2="13"/>
-				<line x1="16" y1="17" x2="8" y2="17"/>
-				<polyline points="10,9 9,9 8,9"/>
-			</svg>
-			Summary
-		</button>
-		<button
-			class="tab-button"
-			id="tab-zwift"
-			role="tab"
-			aria-selected="false"
-			tabindex="0"
-		>
-			<svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-				<circle cx="5.5" cy="17.5" r="3.5"/>
-				<circle cx="18.5" cy="17.5" r="3.5"/>
-				<path d="M15 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-				<path d="M8.5 10 15 15.5V21"/>
-				<path d="M2.5 10.5 5 13l7.5-7.5"/>
-				<path d="M15.5 17.5h-4"/>
-			</svg>
-			Zwift (WIP)
-		</button>
+			<button
+				class="tab-button active"
+				id="tab-map"
+				role="tab"
+				aria-selected="true"
+				tabindex="0"
+			>
+				<svg
+					class="tab-icon"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
+					<circle
+						cx="12"
+						cy="10"
+						r="3"
+					/>
+				</svg>
+				Map
+			</button>
+			<button
+				class="tab-button"
+				id="tab-altfit"
+				role="tab"
+				aria-selected="false"
+				tabindex="0"
+			>
+				<svg
+					class="tab-icon"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<ellipse
+						cx="12"
+						cy="5"
+						rx="9"
+						ry="3"
+					/>
+					<path d="M3 5v14c0 1.66 4.03 3 9 3s9-1.34 9-3V5" />
+					<path d="M3 12c0 1.66 4.03 3 9 3s9-1.34 9-3" />
+				</svg>
+				Data
+			</button>
+			<button
+				class="tab-button"
+				id="tab-data"
+				role="tab"
+				aria-selected="false"
+				tabindex="0"
+			>
+				<svg
+					class="tab-icon"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<polyline points="16,18 22,12 16,6" />
+					<polyline points="8,6 2,12 8,18" />
+				</svg>
+				Raw Data
+			</button>
+			<button
+				class="tab-button"
+				id="tab-chart"
+				role="tab"
+				aria-selected="false"
+				tabindex="0"
+			>
+				<svg
+					class="tab-icon"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<line
+						x1="18"
+						y1="20"
+						x2="18"
+						y2="10"
+					/>
+					<line
+						x1="12"
+						y1="20"
+						x2="12"
+						y2="4"
+					/>
+					<line
+						x1="6"
+						y1="20"
+						x2="6"
+						y2="14"
+					/>
+				</svg>
+				Chart
+			</button>
+			<button
+				class="tab-button"
+				id="tab-chartjs"
+				role="tab"
+				aria-selected="false"
+				tabindex="0"
+			>
+				<svg
+					class="tab-icon"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<polyline points="3,12 7,8 13,14 21,6" />
+					<polyline points="17,6 21,6 21,10" />
+				</svg>
+				Charts v2
+			</button>
+			<button
+				class="tab-button"
+				id="tab-summary"
+				role="tab"
+				aria-selected="false"
+				tabindex="0"
+			>
+				<svg
+					class="tab-icon"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+					<polyline points="14,2 14,8 20,8" />
+					<line
+						x1="16"
+						y1="13"
+						x2="8"
+						y2="13"
+					/>
+					<line
+						x1="16"
+						y1="17"
+						x2="8"
+						y2="17"
+					/>
+					<polyline points="10,9 9,9 8,9" />
+				</svg>
+				Summary
+			</button>
+			<button
+				class="tab-button"
+				id="tab-zwift"
+				role="tab"
+				aria-selected="false"
+				tabindex="0"
+			>
+				<svg
+					class="tab-icon"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<circle
+						cx="5.5"
+						cy="17.5"
+						r="3.5"
+					/>
+					<circle
+						cx="18.5"
+						cy="17.5"
+						r="3.5"
+					/>
+					<path d="M15 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+					<path d="M8.5 10 15 15.5V21" />
+					<path d="M2.5 10.5 5 13l7.5-7.5" />
+					<path d="M15.5 17.5h-4" />
+				</svg>
+				Zwift (WIP)
+			</button>
 		</div>
 		<!-- Card-like Container for Tab Content -->
 		<div class="tab-card">
@@ -338,7 +425,8 @@
 		<div id="background-data-container"></div>
 		<!-- Credits Section -->
 		<div class="credits-section">
-			<footer>				<a
+			<footer>
+				<a
 					href="https://www.FitFileViewer.com/"
 					class="italic ms-2"
 					data-external-link="true"
@@ -359,7 +447,8 @@
 						align="center"
 						aria-label="FitFileViewer logo"
 					/> </a
-				>,				<a
+				>,
+				<a
 					href="https://www.harryonline.net/"
 					class="italic ms-2"
 					data-external-link="true"
@@ -379,7 +468,8 @@
 						align="center"
 						aria-label="HarryOnline logo"
 					/> </a
-				>,				<a
+				>,
+				<a
 					href="https://github.com/thomascamminady/fit-viewer"
 					data-external-link="true"
 					role="link"
@@ -387,7 +477,8 @@
 				>
 					<span class="italic">Thomas Camminady</span>
 				</a>
-				💾,				<a
+				💾,
+				<a
 					href="https://github.com/garmin/fit-javascript-sdk"
 					data-external-link="true"
 					role="link"
@@ -395,7 +486,8 @@
 				>
 					Garmin FIT JavaScript SDK
 				</a>
-				⌚,				<a
+				⌚,
+				<a
 					href="https://leafletjs.com/"
 					data-external-link="true"
 					role="link"
@@ -403,7 +495,8 @@
 				>
 					Leaflet.js
 				</a>
-				🗺️,				<a
+				🗺️,
+				<a
 					href="https://vega.github.io/vega-lite/"
 					data-external-link="true"
 					role="link"
@@ -411,14 +504,16 @@
 				>
 					Vega-Lite
 				</a>
-				📊,				<a
+				📊,
+				<a
 					href="https://github.com/vega/vega-embed"
 					data-external-link="true"
 					role="link"
 					tabindex="0"
 				>
 					Vega-Embed
-				</a>			📈
+				</a>
+				📈
 				<a
 					href="https://zwiftmap.com"
 					data-external-link="true"
