Refactor and improve code readability across multiple utility files
- Updated various functions in `patchSummaryFields.js` to enhance readability by formatting conditional statements.
- Improved the structure of `renderAltitudeProfileChart.js`, `renderChartJS.js`, `renderGPSTrackChart.js`, `renderPowerVsHeartRateChart.js`, and `renderSpeedVsDistanceChart.js` for better clarity.
- Enhanced logging messages in `renderChartsWithData` and `shouldShowRenderNotification` for improved debugging.
- Cleaned up import statements in `renderMap.js` and `setupWindow.js` for consistency.
- Removed sensitive data from `gitleaks-report.json` and added configuration files for various tools including Checkov, Markdown Link Check, and Lychee.
- Updated `setupZoneData.js` to improve the extraction of heart rate zones.
- General code formatting and style improvements across multiple files to adhere to best practices.

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -7,7 +7,10 @@
             name="description"
             content="Desktop application for viewing and analyzing FIT files from fitness devices with data visualization, mapping, and export capabilities"
         />
-        <meta name="keywords" content="FIT file viewer, fitness data, GPS tracks, cycling, running, sports analytics, data visualization" />
+        <meta
+            name="keywords"
+            content="FIT file viewer, fitness data, GPS tracks, cycling, running, sports analytics, data visualization"
+        />
         <title>Fit File Viewer</title>
         <!-- App/Website Icons -->
         <link rel="icon" type="image/png" href="icons/favicon-96x96.png" sizes="96x96" />
@@ -53,10 +56,18 @@
         </header>
         <!-- Header Bar for File Open and Filename -->
         <div class="header-bar">
-            <button id="openFileBtn" class="themed-btn" aria-label="Open FIT File" role="button" tabindex="0">Open FIT File</button>
+            <button id="openFileBtn" class="themed-btn" aria-label="Open FIT File" role="button" tabindex="0">
+                Open FIT File
+            </button>
             <div id="activeFileNameContainer">
                 <span id="activeFileName"></span>
-                <button id="unloadFileBtn" title="Unload file" style="display: none" aria-label="Unload file" tabindex="0">
+                <button
+                    id="unloadFileBtn"
+                    title="Unload file"
+                    style="display: none"
+                    aria-label="Unload file"
+                    tabindex="0"
+                >
                     <svg viewBox="0 0 24 24">
                         <path
                             d="M18.3 5.71a1 1 0 0 0-1.41 0L12 10.59 7.11 5.7A1 1 0 0 0 5.7 7.11L10.59 12l-4.89 4.89a1 1 0 1 0 1.41 1.41L12 13.41l4.89 4.89a1 1 0 0 0 1.41-1.41L13.41 12l4.89-4.89a1 1 0 0 0 0-1.4z"
@@ -208,19 +219,33 @@
                         aria-label="HarryOnline logo"
                     /> </a
                 >,
-                <a href="https://github.com/thomascamminady/fit-viewer" data-external-link="true" role="link" tabindex="0">
+                <a
+                    href="https://github.com/thomascamminady/fit-viewer"
+                    data-external-link="true"
+                    role="link"
+                    tabindex="0"
+                >
                     <span class="italic">Thomas Camminady</span>
                 </a>
                 💾,
-                <a href="https://github.com/garmin/fit-javascript-sdk" data-external-link="true" role="link" tabindex="0">
+                <a
+                    href="https://github.com/garmin/fit-javascript-sdk"
+                    data-external-link="true"
+                    role="link"
+                    tabindex="0"
+                >
                     Garmin FIT JavaScript SDK
                 </a>
                 ⌚,
                 <a href="https://leafletjs.com/" data-external-link="true" role="link" tabindex="0"> Leaflet.js </a>
                 🗺️,
-                <a href="https://vega.github.io/vega-lite/" data-external-link="true" role="link" tabindex="0"> Vega-Lite </a>
+                <a href="https://vega.github.io/vega-lite/" data-external-link="true" role="link" tabindex="0">
+                    Vega-Lite
+                </a>
                 📊,
-                <a href="https://github.com/vega/vega-embed" data-external-link="true" role="link" tabindex="0"> Vega-Embed </a>
+                <a href="https://github.com/vega/vega-embed" data-external-link="true" role="link" tabindex="0">
+                    Vega-Embed
+                </a>
                 📈
                 <a href="https://zwiftmap.com" data-external-link="true" role="link" tabindex="0"> ZwiftMap </a>
                 🗺️
