feat: Implement comprehensive state management system with advanced features
This commit introduces a robust, extensible state management architecture for the FitFileViewer Electron application:

**New State Management Modules:**
- `settingsStateManager.js` - Schema-based, persistent, and validated settings state
- `stateDevTools.js` - Performance monitoring and debugging utilities with dev tools
- `computedStateManager.js` - Reactive computed state values with dependency tracking
- `stateMiddleware.js` - Extensible middleware system (logging, validation, persistence, notifications)

**Core Improvements:**
- Enhanced `masterStateManager.js` to orchestrate all state management components
- Fixed incorrect usage of `masterStateManager.subscribe` in `renderer.js`
- Updated error notification logic to use `showNotification` directly
- Removed unused imports and fixed property/method usage for state checks
- Added proper cleanup and initialization for all state managers

**Developer Experience:**
- Created comprehensive documentation: `STATE_MANAGEMENT_COMPLETE_GUIDE.md`
- Added performance monitoring with timing metrics
- Implemented state validation and error handling
- Exposed debug utilities on `window.__renderer_dev` in development mode

**Features Added:**
- Persistent settings with localStorage integration
- Computed state with automatic dependency tracking
- Middleware pipeline for extensible state operations
- Development tools for state inspection and debugging
- Schema validation for settings with default values
- Reactive state updates with proper cleanup

This enhancement provides a solid foundation for future state management needs while maintaining backward compatibility and following established

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -47,6 +47,16 @@
         <!-- Load screenfull before main-ui.js -->
         <script src="libs/screenfull.min.js" defer></script>
         <script src="main-ui.js" type="module" defer></script>
+        <style>
+            /* Move inline styles to CSS */
+            #unloadFileBtn {
+                display: none;
+            }
+
+            #drop-overlay {
+                display: none;
+            }
+        </style>
     </head>
 
     <body>
@@ -61,13 +71,7 @@
             </button>
             <div id="activeFileNameContainer">
                 <span id="activeFileName"></span>
-                <button
-                    id="unloadFileBtn"
-                    title="Unload file"
-                    style="display: none"
-                    aria-label="Unload file"
-                    tabindex="0"
-                >
+                <button id="unloadFileBtn" title="Unload file" aria-label="Unload file" tabindex="0">
                     <svg viewBox="0 0 24 24">
                         <path
                             d="M18.3 5.71a1 1 0 0 0-1.41 0L12 10.59 7.11 5.7A1 1 0 0 0 5.7 7.11L10.59 12l-4.89 4.89a1 1 0 1 0 1.41 1.41L12 13.41l4.89 4.89a1 1 0 0 0 1.41-1.41L13.41 12l4.89-4.89a1 1 0 0 0 0-1.4z"
@@ -259,7 +263,7 @@
             <span>Loading...</span>
         </div>
         <!-- Drag-and-Drop Overlay -->
-        <div id="drop-overlay" style="display: none">
+        <div id="drop-overlay">
             <div class="drop-overlay-content">
                 <span>Drop FIT file to open</span>
             </div>
