--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src 'self' data: blob:; script-src 'self' 'unsafe-inline' data: blob:; style-src 'self' 'unsafe-inline' data: blob: https://fonts.googleapis.com; img-src 'self' data: blob: https:; font-src 'self' data: blob: https://fonts.gstatic.com; connect-src 'self' data: blob: https: wss:; frame-src 'self' data: blob: https:; worker-src 'self' data: blob:; child-src 'self' data: blob:; object-src 'none'; base-uri 'self';"
+        />
+        <meta
             name="description"
             content="Desktop application for viewing and analyzing FIT files from fitness devices with data visualization, mapping, and export capabilities"
         />
