🧹 [chore] Remove obsolete docs and apply code formatting
This commit cleans up artifacts from the recent `utils` folder reorganization and applies consistent code formatting.

*   📝 [docs] Removes temporary planning and migration markdown files (`REORGANIZATION_COMPLETE.md`, `state-management-remediation-plan.md`, `utils-migration-action-plan.md`) as the described work is now complete.
*   🧹 [chore] Deletes the `fix-remaining-imports.ps1` script, which is no longer needed.
*   📝 [docs] Moves the Copilot instructions into the `.github` folder for better visibility and standard location.
*   🎨 [style] Applies consistent formatting to JavaScript and HTML files, primarily adjusting spacing in type casts and around operators.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -88,9 +88,7 @@
                     <span class="hero-constellation" aria-hidden="true"></span>
                 </div>
                 <div class="app-header-copy">
-                    <h1>
-                        Fit <span class="title-highlight">File</span> Viewer
-                    </h1>
+                    <h1>Fit <span class="title-highlight">File</span> Viewer</h1>
                 </div>
             </div>
             <ul class="app-pill-group" aria-label="Key capabilities">
@@ -110,7 +108,14 @@
             </div>
             <button id="openFileBtn" class="themed-btn" aria-label="Open FIT File" role="button" tabindex="0">
                 <span class="btn-icon" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+                    <svg
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1.8"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    >
                         <path d="M4 7h5l2 2h9v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z" />
                         <path d="M4 7V5a2 2 0 0 1 2-2h5l2 2h5a2 2 0 0 1 2 2v2" />
                     </svg>
@@ -132,7 +137,16 @@
                 </button>
             </div>
             <div class="header-hint" role="note">
-                <svg viewBox="0 0 24 36" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
+                <svg
+                    viewBox="0 0 24 36"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="1.6"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    aria-hidden="true"
+                    focusable="false"
+                >
                     <path d="M16 16v-3m0 0-2 2m2-2 2 2" />
                     <path d="M7 20a4 4 0 0 1 0-8 6 6 0 0 1 11.31-2.49A3.5 3.5 0 1 1 19 16" />
                 </svg>
