--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'self' data: blob:; script-src 'self' 'unsafe-inline' data: blob:; style-src 'self' 'unsafe-inline' data: blob: https://fonts.googleapis.com; img-src 'self' data: blob: https:; font-src 'self' data: blob: https://fonts.gstatic.com; connect-src 'self' data: blob: https: wss:; frame-src 'self' data: blob: https:; worker-src 'self' data: blob:; child-src 'self' data: blob:; object-src 'none'; base-uri 'self';"
+            content="default-src 'self' file: data: blob:; script-src 'self' 'unsafe-inline' file: data: blob:; style-src 'self' 'unsafe-inline' file: data: blob: https://fonts.googleapis.com; img-src 'self' file: data: blob: https:; font-src 'self' file: data: blob: https://fonts.gstatic.com; connect-src 'self' file: data: blob: https: wss:; frame-src 'self' file: data: blob: https:; worker-src 'self' file: data: blob:; child-src 'self' file: data: blob:; object-src 'none'; base-uri 'self';"
         />
         <meta
             name="description"
@@ -221,7 +221,7 @@
                     title="Alternative FIT Data View"
                     allowfullscreen
                     allow
-                    sandbox="allow-top-navigation allow-presentation allow-pointer-lock allow-scripts allow-same-origin allow-modals allow-forms allow-popups allow-storage-access-by-user-activation allow-popups-to-escape-sandbox"
+                    sandbox="allow-same-origin allow-top-navigation allow-presentation allow-pointer-lock allow-scripts allow-modals allow-forms allow-popups allow-storage-access-by-user-activation allow-popups-to-escape-sandbox"
                     referrerpolicy="no-referrer"
                     loading="eager"
                     name="altfit-iframe"
@@ -236,7 +236,7 @@
                     title="ZwiftMap"
                     allowfullscreen
                     allow
-                    sandbox="allow-top-navigation allow-presentation allow-pointer-lock allow-scripts allow-same-origin allow-modals allow-forms allow-popups allow-storage-access-by-user-activation allow-popups-to-escape-sandbox"
+                    sandbox="allow-same-origin allow-top-navigation allow-presentation allow-pointer-lock allow-scripts allow-modals allow-forms allow-popups allow-storage-access-by-user-activation allow-popups-to-escape-sandbox"
                     referrerpolicy="no-referrer"
                     loading="lazy"
                     src="https://zwiftmap.com/"
