✨ [feat] Introduce main process state management API
This commit introduces a new IPC-based API for managing application state within the main process, accessible from the renderer process. This centralizes state logic and provides a structured way for different parts of the application to interact with and react to state changes.

✨ **Features**
-   Adds a new state management API to the preload script, exposing functions to get, set, and listen for changes in the main process state.
-   Exposes endpoints for retrieving the status of operations, recent errors, and performance metrics.
-   Adds `'unsafe-eval'` to the Content Security Policy to support development tooling and libraries.

🧹 **Chore**
-   Updates various frontend library script paths in `index.html`.
-   Updates the `@types/jsdom` development dependency.
-   Aliases unused IPC handler imports in `main.js` to satisfy linter rules.
-   Adds generated TypeScript declaration files from the build process.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'self' file: data: blob:; script-src 'self' 'unsafe-inline' file: data: blob:; style-src 'self' 'unsafe-inline' file: data: blob: https://fonts.googleapis.com; img-src 'self' file: data: blob: https:; font-src 'self' file: data: blob: https://fonts.gstatic.com; connect-src 'self' file: data: blob: https: wss:; frame-src 'self' file: data: blob: https:; worker-src 'self' file: data: blob:; child-src 'self' file: data: blob:; object-src 'none'; base-uri 'self';"
+            content="default-src 'self' file: data: blob:; script-src 'self' 'unsafe-inline' 'unsafe-eval' file: data: blob:; style-src 'self' 'unsafe-inline' file: data: blob: https://fonts.googleapis.com; img-src 'self' file: data: blob: https:; font-src 'self' file: data: blob: https://fonts.gstatic.com; connect-src 'self' file: data: blob: https: wss:; frame-src 'self' file: data: blob: https:; worker-src 'self' file: data: blob:; child-src 'self' file: data: blob:; object-src 'none'; base-uri 'self';"
         />
         <meta
             name="description"
@@ -35,14 +35,14 @@
         <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css" />
         <link rel="stylesheet" href="node_modules/leaflet-measure/dist/leaflet-measure.css" />
         <script src="node_modules/jquery/dist/jquery.min.js" defer></script>
-        <script src="node_modules/datatables.net/js/jquery.dataTables.min.js" defer></script>
+        <script src="node_modules/datatables.net/js/dataTables.min.js" defer></script>
         <script src="node_modules/datatables.net-dt/js/dataTables.dataTables.min.js" defer></script>
         <script src="node_modules/arquero/dist/arquero.min.js" defer></script>
         <script src="node_modules/chart.js/dist/chart.umd.js"></script>
-        <script src="node_modules/date-fns/dist/date-fns.min.js"></script>
+        <script src="node_modules/date-fns/cdn.min.js"></script>
         <!-- Add Hammer.js for chartjs-plugin-zoom touch/pinch support -->
         <script src="node_modules/hammerjs/hammer.min.js"></script>
-        <script src="node_modules/chartjs-plugin-zoom/dist/chartjs-plugin-zoom.umd.js"></script>
+        <script src="node_modules/chartjs-plugin-zoom/dist/chartjs-plugin-zoom.min.js"></script>
         <script src="node_modules/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
         <!-- JSZip for ZIP file creation -->
         <script src="node_modules/jszip/dist/jszip.min.js"></script>
