✨ [feat] Implement dynamic accent color theming system
This commit introduces a comprehensive and customizable accent color system, allowing users to personalize the application's appearance. It includes a core theming engine, multiple UI components for color selection, and style updates across the application to adopt the new system.

### ✨ Features
-   **Accent Color Engine**:
    -   Adds a new core module (`accentColor.js`) to manage setting, getting, resetting, and persisting custom accent colors in `localStorage`.
    -   Dynamically generates a full palette of color variations (e.g., secondary, hover, glows, gradients) from a single base color.
    -   Applies colors via CSS custom properties, allowing for real-time updates without a page reload.
-   **Unified Control Bar**:
    -   Introduces a new floating control bar in the top-right corner to group application-level UI controls.
    -   Moves the existing fullscreen button and the new quick color switcher into this unified bar for a cleaner interface.
    -   Includes a new, robust tooltip system for all control bar buttons.
-   **Color Selection UIs**:
    -   Adds a "Quick Color Switcher" dropdown to the new control bar, offering a palette of curated preset colors for fast changes.
    -   Implements a full "Settings" modal with advanced appearance options.
        -   Provides controls for theme selection (Auto, Dark, Light).
        -   Includes a detailed accent color picker with a color wheel, hex input, and a live preview of UI components.
    -   Integrates a new "Accent Color..." option in the main application menu to open the settings modal.
-   **Auto-Scrolling Filename**:
    -   Implements an auto-scrolling animation for the active filename in the header when it's too long to fit, ensuring full visibility.

### 🎨 Style & Refactor
-   Updates UI components across the application to use the new accent color CSS variables, including:
    -   Buttons and gradients.
    -   Map controls (zoom butt

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -60,6 +60,18 @@
         <script src="utils.js" type="module" defer></script>
         <!-- Load screenfull before main-ui.js -->
         <script type="module" src="vendor/screenfull-global.js"></script>
+        <script src="ui/modals/accentColorPicker.js" type="module" defer></script>
+        <script type="module">
+            // Initialize Quick Color Switcher and Unified Control Bar
+            import { initQuickColorSwitcher } from './utils/ui/quickColorSwitcher.js';
+            import { initUnifiedControlBar, initFilenameAutoScroll } from './utils/ui/unifiedControlBar.js';
+
+            document.addEventListener('DOMContentLoaded', () => {
+                initQuickColorSwitcher();
+                initUnifiedControlBar();
+                initFilenameAutoScroll();
+            });
+        </script>
         <script src="main-ui.js" type="module" defer></script>
         <style>
             /* Move inline styles to CSS */
@@ -131,10 +143,6 @@
                     </svg>
                 </span>
                 <span class="btn-label">Open FIT File</span>
-                <span class="btn-kbd" aria-hidden="true">
-                    <kbd>Ctrl</kbd>
-                    <kbd>O</kbd>
-                </span>
             </button>
             <div id="activeFileNameContainer">
                 <span id="activeFileName"></span>
