🎨 [style] Apply consistent code formatting across the project
This commit introduces a wide-ranging set of stylistic updates to enforce a consistent code format across multiple files.

- 🎨 Standardizes quote usage from single (`'`) to double (`"`) quotes in JavaScript, HTML, and CSS files for uniformity.
- 🎨 Improves readability by adding consistent spacing, notably within JSDoc type casts (e.g., `/** @type {any} */(val)` becomes `/** @type {any} */ (val)`).
- 🎨 Refactors empty arrow function bodies from `() => { }` to the more compact `() => {}`.
- 🎨 Normalizes whitespace, indentation, and line breaks in CSS, including within `@keyframes` blocks and property declarations.
- 🎨 Cleans up minor formatting inconsistencies in object literals, function calls, and ternary expressions.

These changes are purely cosmetic and do not alter the application's runtime behavior or logic.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -63,10 +63,10 @@
         <script src="ui/modals/accentColorPicker.js" type="module" defer></script>
         <script type="module">
             // Initialize Quick Color Switcher and Unified Control Bar
-            import { initQuickColorSwitcher } from './utils/ui/quickColorSwitcher.js';
-            import { initUnifiedControlBar, initFilenameAutoScroll } from './utils/ui/unifiedControlBar.js';
+            import { initQuickColorSwitcher } from "./utils/ui/quickColorSwitcher.js";
+            import { initUnifiedControlBar, initFilenameAutoScroll } from "./utils/ui/unifiedControlBar.js";
 
-            document.addEventListener('DOMContentLoaded', () => {
+            document.addEventListener("DOMContentLoaded", () => {
                 initQuickColorSwitcher();
                 initUnifiedControlBar();
                 initFilenameAutoScroll();
