🎨 [style] Enhance UI with modern styles
Improves the application's user interface by adding modern styles, a theme system, and reusable modal utilities.

- ✨ Introduces a new `ui-enhancements.css` file containing styles for buttons, forms, notifications, loading states, modals, tabs, and other components
 - Enhances the visual appeal and user experience of the application
 - Implements a consistent and modern design language across different UI elements
 - Includes utility classes for common styling needs, like flexbox layouts, spacing, and shadows
 - Adds component-specific enhancements for charts and maps
- 🧪 Creates a `theme-test.html` file to showcase and test the theme system
 - Allows developers to preview and verify the appearance of UI components under different themes
 - Provides a visual reference for available styles and components
- 🛠️ Adds a `BaseModal` class and related utilities for managing modal dialogs
 - Simplifies the creation and management of modal dialogs throughout the application
 - Provides a consistent API for showing, hiding, and configuring modals
 - Includes features like focus trapping, backdrop closing, and escape key handling
- ⚡ Adds preloading for critical CSS to improve initial load performance.
- 📝 Includes updated type definitions for the new modal utilities.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -16,6 +16,11 @@
             content="FIT file viewer, fitness data, GPS tracks, cycling, running, sports analytics, data visualization"
         />
         <title>Fit File Viewer</title>
+
+        <!-- Preload critical CSS for better performance -->
+        <link rel="preload" href="style.css" as="style" />
+        <link rel="preload" href="ui-enhancements.css" as="style" />
+
         <!-- App/Website Icons -->
         <link rel="icon" type="image/png" href="icons/favicon-96x96.png" sizes="96x96" />
         <link rel="icon" type="image/svg+xml" href="icons/favicon.svg" />
@@ -56,6 +61,8 @@
         <script src="node_modules/maplibre-gl/dist/maplibre-gl.js" defer></script>
         <script src="node_modules/@maplibre/maplibre-gl-leaflet/leaflet-maplibre-gl.js" defer></script>
         <link rel="stylesheet" href="style.css" />
+        <!-- UI Enhancements - Modern component styles -->
+        <link rel="stylesheet" href="ui-enhancements.css" />
         <!-- utils.js depends on jQuery, DataTables, Arquero, and Chart.js. Load it after these libraries using defer to maintain order. -->
         <script src="utils.js" type="module" defer></script>
         <!-- Load screenfull before main-ui.js -->
