--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE electron>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -15,6 +15,8 @@
             name="keywords"
             content="FIT file viewer, fitness data, GPS tracks, cycling, running, sports analytics, data visualization"
         />
+        <meta name="author" content="FitFileViewer Development Team" />
+        <meta name="theme-color" content="#3b82f6" />
         <title>Fit File Viewer</title>
 
         <!-- Preload critical CSS for better performance -->
@@ -47,6 +49,8 @@
         <script src="node_modules/date-fns/cdn.min.js"></script>
         <!-- Add Hammer.js for chartjs-plugin-zoom touch/pinch support -->
         <script src="node_modules/hammerjs/hammer.min.js"></script>
+        <!-- Iconify icon web component for professional colorful icons -->
+        <script src="node_modules/iconify-icon/dist/iconify-icon.min.js"></script>
         <script src="node_modules/chartjs-plugin-zoom/dist/chartjs-plugin-zoom.min.js"></script>
         <script src="node_modules/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
         <!-- JSZip for ZIP file creation -->
@@ -63,6 +67,8 @@
         <link rel="stylesheet" href="style.css" />
         <!-- UI Enhancements - Modern component styles -->
         <link rel="stylesheet" href="ui-enhancements.css" />
+        <!-- UI Utilities - Modern utility classes for rapid development -->
+        <link rel="stylesheet" href="ui-utilities.css" />
         <!-- utils.js depends on jQuery, DataTables, Arquero, and Chart.js. Load it after these libraries using defer to maintain order. -->
         <script src="utils.js" type="module" defer></script>
         <!-- Load screenfull before main-ui.js -->
@@ -80,19 +86,12 @@
             });
         </script>
         <script src="main-ui.js" type="module" defer></script>
-        <style>
-            /* Move inline styles to CSS */
-            #unloadFileBtn {
-                display: none;
-            }
-
-            #drop-overlay {
-                display: none;
-            }
-        </style>
     </head>
 
     <body>
+        <!-- Skip to main content link for accessibility -->
+        <a href="#main-content" class="skip-to-main">Skip to main content</a>
+
         <!-- App Header -->
         <header class="app-header">
             <div class="app-header-brand">
@@ -127,115 +126,63 @@
             </ul>
         </header>
         <!-- Header Bar for File Open and Filename -->
-        <div class="header-bar">
+        <div class="header-bar" role="region" aria-label="File Management">
             <div class="header-brand">
                 <span class="header-brand-ambient" aria-hidden="true"></span>
                 <div class="brand-text">
                     <span class="brand-name">Fit File Viewer</span>
-                    <span class="brand-subtitle">Dashboards &amp; analytics</span>
+                    <span class="brand-subtitle" aria-label="Application purpose">Dashboards &amp; analytics</span>
                 </div>
             </div>
-            <button id="openFileBtn" class="themed-btn" aria-label="Open FIT File" role="button" tabindex="0">
+            <button id="openFileBtn" class="btn" title="Open FIT File" aria-label="Open FIT file from your computer" tabindex="0">
                 <span class="btn-icon" aria-hidden="true">
-                    <svg
-                        viewBox="0 0 24 24"
-                        fill="none"
-                        stroke="currentColor"
-                        stroke-width="1.8"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                    >
-                        <path d="M4 7h5l2 2h9v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z" />
-                        <path d="M4 7V5a2 2 0 0 1 2-2h5l2 2h5a2 2 0 0 1 2 2v2" />
-                    </svg>
+                    <iconify-icon icon="flat-color-icons:opened-folder" width="24" height="24"></iconify-icon>
                 </span>
                 <span class="btn-label">Open FIT File</span>
             </button>
-            <div id="activeFileNameContainer">
-                <span id="activeFileName"></span>
-                <button id="unloadFileBtn" title="Unload file" aria-label="Unload file" tabindex="0">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="M18.3 5.71a1 1 0 0 0-1.41 0L12 10.59 7.11 5.7A1 1 0 0 0 5.7 7.11L10.59 12l-4.89 4.89a1 1 0 1 0 1.41 1.41L12 13.41l4.89 4.89a1 1 0 0 0 1.41-1.41L13.41 12l4.89-4.89a1 1 0 0 0 0-1.4z"
-                        />
-                    </svg>
+            <div id="activeFileNameContainer" role="status" aria-live="polite">
+                <span id="activeFileName" aria-label="Currently loaded file"></span>
+                <button id="unloadFileBtn" title="Unload current file" aria-label="Unload current file and return to start screen" tabindex="0">
+                    <iconify-icon icon="twemoji:cross-mark" width="20" height="20"></iconify-icon>
                 </button>
             </div>
-            <div class="header-hint" role="note">
-                <svg
-                    viewBox="0 0 24 36"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="1.6"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    aria-hidden="true"
-                    focusable="false"
-                >
-                    <path d="M16 16v-3m0 0-2 2m2-2 2 2" />
-                    <path d="M7 20a4 4 0 0 1 0-8 6 6 0 0 1 11.31-2.49A3.5 3.5 0 1 1 19 16" />
-                </svg>
+            <div class="header-hint" role="note" aria-label="File drop hint">
+                <iconify-icon icon="flat-color-icons:upload" width="28" height="28"></iconify-icon>
                 <span>Drop a FIT file anywhere to open.</span>
             </div>
         </div>
         <!-- Centered Tab Bar -->
-        <div id="tabs" class="tab-bar" role="tablist" aria-label="Main Tabs">
-            <button class="tab-button active" id="tab-map" role="tab" aria-selected="true" tabindex="0">
-                <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
-                    <circle cx="12" cy="10" r="3" />
-                </svg>
-                Map
+        <nav id="tabs" class="tab-bar" role="tablist" aria-label="Main navigation tabs">
+            <button class="tab-button active" id="tab-map" role="tab" aria-selected="true" aria-controls="content-map" tabindex="0" aria-label="Map view - GPS track visualization">
+                <iconify-icon class="tab-icon" icon="flat-color-icons:globe" aria-hidden="true"></iconify-icon>
+                <span>Map</span>
             </button>
-            <button class="tab-button" id="tab-altfit" role="tab" aria-selected="false" tabindex="0">
-                <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <ellipse cx="12" cy="5" rx="9" ry="3" />
-                    <path d="M3 5v14c0 1.66 4.03 3 9 3s9-1.34 9-3V5" />
-                    <path d="M3 12c0 1.66 4.03 3 9 3s9-1.34 9-3" />
-                </svg>
-                Data
+            <button class="tab-button" id="tab-altfit" role="tab" aria-selected="false" aria-controls="content-altfit" tabindex="-1" aria-label="Data view - Detailed metrics and statistics">
+                <iconify-icon class="tab-icon" icon="flat-color-icons:database" aria-hidden="true"></iconify-icon>
+                <span>Data</span>
             </button>
-            <button class="tab-button" id="tab-data" role="tab" aria-selected="false" tabindex="0">
-                <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="16,18 22,12 16,6" />
-                    <polyline points="8,6 2,12 8,18" />
-                </svg>
-                Raw Data
+            <button class="tab-button" id="tab-data" role="tab" aria-selected="false" aria-controls="content-data" tabindex="-1" aria-label="Raw data view - Complete FIT file contents">
+                <iconify-icon class="tab-icon" icon="vscode-icons:file-type-json" aria-hidden="true"></iconify-icon>
+                <span>Raw Data</span>
             </button>
-            <button class="tab-button" id="tab-chartjs" role="tab" aria-selected="false" tabindex="0">
-                <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="3,12 7,8 13,14 21,6" />
-                    <polyline points="17,6 21,6 21,10" />
-                </svg>
-                Charts
+            <button class="tab-button" id="tab-chartjs" role="tab" aria-selected="false" aria-controls="content-chartjs" tabindex="-1" aria-label="Charts view - Interactive data visualizations">
+                <iconify-icon class="tab-icon" icon="flat-color-icons:line-chart" aria-hidden="true"></iconify-icon>
+                <span>Charts</span>
             </button>
-            <button class="tab-button" id="tab-summary" role="tab" aria-selected="false" tabindex="0">
-                <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
-                    <polyline points="14,2 14,8 20,8" />
-                    <line x1="16" y1="13" x2="8" y2="13" />
-                    <line x1="16" y1="17" x2="8" y2="17" />
-                    <polyline points="10,9 9,9 8,9" />
-                </svg>
-                Summary
+            <button class="tab-button" id="tab-summary" role="tab" aria-selected="false" aria-controls="content-summary" tabindex="-1" aria-label="Summary view - Activity overview and key metrics">
+                <iconify-icon class="tab-icon" icon="flat-color-icons:document" aria-hidden="true"></iconify-icon>
+                <span>Summary</span>
             </button>
-            <button class="tab-button" id="tab-zwift" role="tab" aria-selected="false" tabindex="0">
-                <svg class="tab-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="5.5" cy="17.5" r="3.5" />
-                    <circle cx="18.5" cy="17.5" r="3.5" />
-                    <path d="M15 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
-                    <path d="M8.5 10 15 15.5V21" />
-                    <path d="M2.5 10.5 5 13l7.5-7.5" />
-                    <path d="M15.5 17.5h-4" />
-                </svg>
-                Zwift (WIP)
+            <button class="tab-button" id="tab-zwift" role="tab" aria-selected="false" aria-controls="content-zwift" tabindex="-1" aria-label="Zwift view - Virtual cycling integration (Work in Progress)">
+                <iconify-icon class="tab-icon" icon="twemoji:person-biking" aria-hidden="true"></iconify-icon>
+                <span>Zwift <span class="text-xs opacity-75">(WIP)</span></span>
             </button>
-        </div>
+        </nav>
         <!-- Card-like Container for Tab Content -->
-        <div class="tab-card">
-            <div id="content-map" class="tab-content"></div>
-            <div id="content-data" class="tab-content"></div>
-            <div id="content-chartjs" class="tab-content">
+        <main id="main-content" class="tab-card">
+            <div id="content-map" class="tab-content" role="tabpanel" aria-labelledby="tab-map"></div>
+            <div id="content-data" class="tab-content" role="tabpanel" aria-labelledby="tab-data"></div>
+            <div id="content-chartjs" class="tab-content" role="tabpanel" aria-labelledby="tab-chartjs">
                 <div id="chartjs-chart-container"></div>
             </div>
             <div id="content-summary" class="tab-content"></div>
@@ -271,7 +218,7 @@
                     aria-label="ZwiftMap"
                 ></iframe>
             </div>
-        </div>
+        </main>
         <!-- Hidden background containers for pre-rendering -->
         <div id="background-chart-container"></div>
         <div id="background-data-container"></div>
