🎨 [style] Enhance chart UI with icons
Updates the chart UI to improve visual clarity and user experience.

- Adds Iconify icons to chart titles, axis labels, and status indicators.
 - Improves the visual representation of chart elements.
- Refactors chart components to use Iconify icons instead of text-based indicators.
 - Enhances the visual appeal and clarity of chart status.
- Updates chart hover effects to use theme colors.
 - Improves the visual consistency of chart interactions.
- Modifies chart rendering to set title colors to transparent.
 - Improves chart readability.
- Updates chart tests to reflect icon changes.
 - Ensures tests pass with the updated UI.
- Adds type definitions for chart label metadata.
 - Improves code maintainability.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -291,7 +291,7 @@
                 <a href="https://vega.github.io/vega-lite/" data-external-link="true" role="link" tabindex="0">
                     Vega-Lite
                 </a>
-                📊,
+                <iconify-icon icon="flat-color-icons:line-chart" width="16" height="16" aria-hidden="true"></iconify-icon>,
                 <a href="https://github.com/vega/vega-embed" data-external-link="true" role="link" tabindex="0">
                     Vega-Embed
                 </a>
